dataset1235/2025-2/1153765216/users/2713785857/executions/2814675586_1026882843.log
== SUBMISSION (2025-08-26 19:33:44)
-- CODE: 
from math import *
raio = float(input("raio de um circulo"))
area = pi * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
raio de um circulo0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
raio de um circulo32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
raio de um circulo38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
raio de um circulo452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
raio de um circulo221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
raio de um circulo346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:31:51)
-- CODE: 
from math import
raio = float(input("raio de um circulo"))
area = (pi * raio * 2)
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:37:32)
-- CODE: 
raio = float(input("raio de um circulo"))
pi = 3.15
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
raio de um circulo0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
raio de um circulo32.256
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
raio de um circulo38.5875
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
raio de um circulo453.6
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
raio de um circulo222.264
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
raio de um circulo347.2875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
